[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release_max_speed]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = ["benchmark", "core_raft", ]

[workspace.dependencies]

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
futures = "0.3.31" # 用于高效处理字节数据
fory = "0.14.1"
fory-derive = "0.14.1"
fory-core = "0.14.1"
serde_yaml = "0.9.34+deprecated"
moka = { version = "0.12.12", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
