[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
core_raft = { path = "../core_raft" }
openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13", features = ["type-alias", "serde"] }
futures = "0.3.31"
tracing = "0.1.44"
serde = "1.0.228"

tokio = { version = "1.50.0", features = ["full"] }

clap = { version = "4.5.54", features = ["derive"] }
console-subscriber = "0.5.0"