[package]
name = "core_raft"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true


[dependencies]
#openraft = { version = "0.9.21", features = ["type-alias"] }
openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13", features = ["type-alias", "serde"] }
openraft-multi = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13" }
futures = "0.3.31"
tracing = "0.1.44"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
bincode2 = "2.0.1"
bytes = "1.11.0"
moka = { version = "0.12.12", features = ["sync"] }
async-trait = "0.1.89"
rocksdb = "0.24.0"
byteorder = "1.5.0"
tempfile = "3.24.0"
flamegraph = "0.6.11"
dashmap = "6.1.0"

mimalloc = "0.1.48"
anyhow = "1.0.100"
crossbeam-utils = "0.8.21"
parking_lot = "0.12.5"
indexmap = "2.13.0"
lru = "0.16.3"
raft-engine = { git = "https://github.com/nasuiyile/raft-engine-serde" }
rand = "0.8"
rand_distr = "0.4"
serde_yaml = "0.9.33"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
console-subscriber = { version = "0.5", optional = true }
tracing-flame = { version = "0.2", optional = true }

[features]
default = [
    "io_uring",
]
tokio-console = ["console-subscriber"]
flamegraph = ["tracing-flame"]
io_uring = ["tokio/io-uring"]