[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
bytes.workspace = true
fory.workspace = true
fory-derive.workspace = true
fory-core.workspace = true
serde_yaml.workspace = true
serde.workspace = true
moka.workspace = true
openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13", features = ["type-alias"] }
